# check24-betting-challenge

./: Makefile  README.md
client/: package.json  tailwind.config.js  vite.config.js
client/mockup/: .gitignore
client/src/: App.vue  entities.ts  router.js  store.ts
client/src/api/: community.ts  index.ts
client/src/components/: community.vue  game.vue
client/src/router/: index.js
client/src/views/: betting.vue  communities.vue  community.vue  dashboard.vue  home.vue  index.js  login.vue
scripts/: bets  games_to_sql  mockup
server/: .gitignore  Cargo.toml  Rocket.toml
server/migrations/: .gitignore  1_Create_tables.sql  20240508191955_Create_tables.sql
server/scripts/: games_to_sql
server/src/: betting.rs  database.rs  error.rs  main.rs  orm.rs  realtime.rs  schema.rs
