[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
chrono = "0.4.38"
serde = { version = "1.0.199", features = ["derive"] }

[dependencies.rocket]
version = "0.5.0"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_sqlite"]

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = ["macros", "migrate"]

[dev-dependencies]
sqlx-cli = "0.7.4"
